--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
 	"name": "dimloglines",
 	"displayName": "DimLogLines",
 	"description": "dim log lines",
-	"version": "0.0.1",
+	"version": "0.0.2",
+	"icon": "images/dimlog.png",
+	"license" : "Free",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/uttntt/dimloglines.git"
+  },
 	"engines": {
 		"vscode": "^1.46.0"
 	},
